# hackaithon-vsds

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  answer_parser.py  benchmark.py  config.py  input_loader.py  main.py  models.py  output_writer.py  prompt_builder.py
app/evaluation/: __init__.py  experiments.py  gold.py  metrics.py  model_benchmark.py  reports.py  review.py  runner.py  strategy_benchmark.py
app/prompts/: __init__.py  baseline.py  compact.py  (+3 more)
data/: gold_validation.json  public_subset_deterministic.json  public_subset_known.json  sample_public_test.json
docs/: fine_tuning_plan.md  retrieval_framework.md
embeddings/: bge_m3_reference_documents.json
experiments/: experiments.yaml
knowledge_base/: reference_documents.json
scripts/: benchmark_models.py  benchmark_retrieval.py  benchmark_strategies.py  bootstrap_ollama.sh  build_embeddings.py  build_kb.py  docker_smoke_test.sh  evaluate_gold.py  export_review_sheet.py  inspect_environment.sh  run_experiments.py  run_local.sh  run_real_model_smoke_test.sh
submissions/: benchmark_summary.json  debug_predictions.jsonl
tests/: test_answer_parser.py  test_auto_solver.py  test_end_to_end.py  test_experiment_tools.py  test_gold_evaluation.py  test_heuristic_solver.py  test_input_loader.py  test_llm_solver.py  test_mock_provider.py  test_model_benchmark.py  test_ollama_schema.py  test_output_writer.py  test_prompt_builder.py  test_prompt_registry.py  test_retrieval.py  test_strategy_lab.py
training/: README.md
(+34 files in other folders)
